<resources>
    <string name="app_name">FinalProject</string>
    <string name="parking_text">Parking</string>
    <string name="campus_map">Map of Campus</string>
    <string name="reminders">Reminders</string>
    <string name="nku_directory">NKU directory</string>
    <string name="safety">Safety</string>
    <string name="email">Email</string>
    <string name="miscellaneous">Miscellaneous</string>
</resources>
