<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/parking"
            android:title="@string/parking_text"
            android:icon="@drawable/ic_menu_test"
            />


        <item
            android:id="@+id/campus_map"
            android:title="@string/campus_map"
            android:icon="@drawable/ic_menu_test2"

            />

        <item
            android:id="@+id/reminders"
            android:title="@string/reminders"
            android:icon="@drawable/ic_menu_test"
            />

        <item
            android:id="@+id/directory"
            android:title="@string/nku_directory"
            android:icon="@drawable/ic_menu_test"
            />

        <item
            android:id="@+id/safety"
            android:title="@string/safety"
            android:icon="@drawable/ic_menu_test"
            />

        <item
            android:id="@+id/email"
            android:title="@string/email"
            android:icon="@drawable/ic_menu_test"
            />

        <item
            android:id="@+id/misc"
            android:title="@string/miscellaneous"
            android:icon="@drawable/ic_menu_test"
            />


    </group>






</menu>